fix header brand on mobile

--- a/blocks/src/blocks/header-brand/style.scss
+++ b/blocks/src/blocks/header-brand/style.scss
@@ -46,6 +46,11 @@
 			flex-wrap: wrap;
 		}
 
+		.logo-wrapper {
+			flex-direction: row;
+			gap: var(--wp--preset--spacing--20);
+		}
+
 		.caes-hub-header-brand-logo {
 			margin: 0;
 			height: 4rem;
